--- a/Tarea.tex
+++ b/Tarea.tex
@@ -406,7 +406,7 @@
             \item $\forall k \in I \cup J \; Z_k \subseteq \Set{X_i}_{i \in I} \cup \Set{Y_j}_{j \in J}$
 
                 Este sale directo, pues sea $Z_k \in \Set{X_i}_{i \in I} \cup \Set{Y_j}_{j \in J}$
-                entonces o bien $Z_k \in X$ o $Z_k \in Y$, vayamos por casos:
+                entonces o bien $Z_k \subseteq X$ o $Z_k \subseteq Y$, vayamos por casos:
 
                 Si $Z_k \in \Set{X_i}_{i \in I}$ entonces por definición de partición sobre X
                 $Z_k \subseteq X \subseteq X \cup Y$ por lo tanto $Z_k \in X \cup Y$
